# pa-sink-ctl

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.bak  README  configure.ac  interface.c  interface.h  pa-sink-ctl.c  pa-sink-ctl.desktop  sink.c  sink.h  sink_input.c  sink_input.h
data/: Makefile.am  config
src/: Makefile.am  command.c  command.h  config.c  config.h  config.ini  ctl.h  g_curses_input.c  g_curses_input.h  g_unix_signal.c  interface.c  interface.h  pa-sink-ctl-manpage.css  pa-sink-ctl.1.txt  pa-sink-ctl.c  pa-sink-ctl.h  sink.c  sink.h  sink_input.c  sink_input.h  unix_signal.c  unix_signal.h
